--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss"
+
+:root {
+  --color-white: #ffffff;
+}
 
 body {
   @apply bg-gray-50 text-gray-800;
