--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 .text-white {
   color: var(--color-white) !important;
 }
